# iblatlas

./: .flake8  .gitignore  CHANGELOG.md  CITATION.cff  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: iblatlas_ci.yml  pypi_publish.yml
examples/: Working with ibllib atlas.ipynb  atlas_circular_pyramidal_flatmap.ipynb  atlas_connectivity_mesoscale.ipynb  atlas_dorsal_cortex_flatmap.ipynb  atlas_genomics_agea_regions_predictor.py  atlas_genomics_load_agea.ipynb  atlas_genomics_load_allen_gene_expression_atlas.py  atlas_genomics_load_merfish.ipynb  atlas_mapping.ipynb  atlas_plotting_points_on_slice.ipynb  atlas_plotting_scalar_on_slice.ipynb  atlas_streamlines.ipynb  atlas_swanson_flatmap.ipynb  atlas_working_with_ibllib_atlas.ipynb  genomics_load_allen_gene_expression_atlas.py  visualize_agea_volumes.py
examples/3D/: meshes_convert_allen_obj_to_glb.py  meshes_load_and_display.py
iblatlas/: __init__.py  atlas.py  flatmaps.py  genes.py  plots.py  regions.py
iblatlas/connectivity/: __init__.py  mesoscale.py
iblatlas/connectivity/mesoscale_scrapping/: 01_build_regionalized_matrix.py  02_add_structure_volumes.py  (+2 more)
iblatlas/genomics/: __init__.py  agea.py  merfish.py
iblatlas/gui/: atlas_gui.ui  atlasview.py  braintree.py  dock.py  launcher.py
iblatlas/streamlines/: __init__.py  utils.py
iblatlas/tests/: test_allen_atlas.py  test_atlas.py  test_connectivity.py  test_genomics.py
skills/iblatlas-connectivity-mesoscale/: SKILL.md
skills/iblatlas-genomics-agea/: SKILL.md
skills/iblatlas-genomics-merfish/: SKILL.md
(+12 files in other folders)
